Add reusable echo step in dotnet-build.yml
Added a reusable echo step to the build workflow.

--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -11,6 +11,14 @@ jobs:
       - name:  Start build process
         run: echo "build process has started..."
 
+      - &echo-template
+        name: Echo template
+        run: echo "This is a reusable step."
+        shell: bash
+
+
+          
+
       - name: Show runtime context
         run: |
           echo: "Runner OS: ${{ runner.os }}"
@@ -20,3 +28,6 @@ jobs:
           echo "Actor ${{ github.actor }}"
           echo "Run number: ${{ github.run_number}}"
           echo "Branch: ${{ github.red }}"
+
+      - *echo-template
+      
