Update working directory and project path in CI config

--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -41,11 +41,11 @@ jobs:
           dotnet-version: '9.0.x'
 
       - name: Build project
-        working-directory: CleanCodeDevOps.App/
+        working-directory: CleanCodeDevOps/
         run: dotnet build
 
 
 
       - name: Run project
-        run: dotnet run --project CleanCodeDevOps.App/CleanCodeDevOps.App.csproj
+        run: dotnet run --project CleanCodeDevOps/CleanCodeDevOps.csproj
 
