--- a/.github/workflows/conditions-demo.yml
+++ b/.github/workflows/conditions-demo.yml
@@ -21,5 +21,5 @@ jobs:
 
       - name: Runs only if previous step fails
         if: failure()
-        run: echo "blablabla"
+        run: echo "Previous step fails, therefore I run"
           
