Fix syntax error in conditions-demo.yml

--- a/.github/workflows/conditions-demo.yml
+++ b/.github/workflows/conditions-demo.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Simulating a failing step
         run: |
-          echo: "Step fails intentionally"
+          echo "Step fails intentionally"
           exit: 1
 
       - name: Runs only if previous step fails
